<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rims_new.MainActivity" >           
        <item 
            android:id="@+id/action_search"
            android:icon="@drawable/actionbar_search_icon"           
            android:actionViewClass="android.widget.SearchView"  
             android:showAsAction="ifRoom|collapseActionView"                
                android:title="@string/action_search"
            />              
            <item 
            android:id="@+id/action_addpeople"
            android:icon="@drawable/menu_add_icon"                                   
                android:title="@string/menu_addPeople"
            />
            <item 
            android:id="@+id/action_scan"
            android:icon="@drawable/men_scan_icon"                         
                android:title="@string/menu_scan"
            />
            <item 
            android:id="@+id/action_feedback"
            android:icon="@drawable/menu_feedback_icon"                                  
                android:title="@string/menu_feedback"
            />
         

</menu>
