<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hyman="http://schemas.android.com/apk/res/com.rims_new"
      android:theme="@android:style/Theme.NoTitleBar.Fullscreen" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <slidingmenu.SlidingMenu
        android:id="@+id/id_toggleMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"     
      >
     <LinearLayout
            android:id="@+id/id_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
      <include layout="@layout/left_menu" />
      <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#fffff9eb"  >
               <LinearLayout 
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="5dp"
                   android:layout_marginBottom="5dp"
                   >
                   <TextView 
                       android:id="@+id/id_Number"
                       android:layout_width="40dp"
                       android:layout_height="25dp"
                       android:text="序号"
                       android:textSize="18sp"
                       android:gravity="center"/>
                     <TextView 
                       android:id="@+id/id_Name"
                       android:layout_width="100dp"
                       android:layout_height="25dp"
                       android:text="姓名"
                       android:textSize="18sp"
                       android:gravity="center"/>
                       <TextView 
                       android:id="@+id/id_Sex"
                       android:layout_width="80dp"
                       android:layout_height="25dp"
                       android:text="性别"                       
                       android:textSize="18sp"
                       android:gravity="center"/>
                         <TextView 
                       android:id="@+id/id_Birth"
                       android:layout_width="match_parent"
                       android:layout_height="25dp"
                      android:text="出生日期"
                       android:textSize="18sp"
                       android:gravity="center"/>
               </LinearLayout>
                <ListView
                    android:id="@+id/listView1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" 
                    android:layout_weight="1">
               </ListView>
                	<LinearLayout
                	    android:layout_width="match_parent"
                	    android:layout_height="60dp"
                	    android:background="@drawable/tab_bg" 
                	    android:orientation="horizontal">
                	   <com.rims_new.ChangeColorIconWithText
                	       android:id="@+id/id_indicator_one"
                	       android:layout_width="0dp"               	    
                	       android:layout_height="match_parent"
                	       android:layout_weight="1"
                	       android:padding="5dp"
                	       hyman:icon="@drawable/ic_menu_allfriends"               	   
                	       hyman:text="@string/tab_people"
                	       hyman:text_size="12sp"
                	       hyman:color="#ff45c01a"/>
                	      <com.rims_new.ChangeColorIconWithText
                	      android:id="@+id/id_indicator_two"
                	       android:layout_width="0dp"               	    
                	       android:layout_height="match_parent"
                	       android:layout_weight="1"
                	       android:padding="5dp"
                	       hyman:icon="@drawable/ic_menu_friendslist"               	   
                	       hyman:text="@string/tab_house"
                	       hyman:text_size="12sp"
                	       hyman:color="#ff45c01a"/>
                	         <com.rims_new.ChangeColorIconWithText
                	       android:id="@+id/id_indicator_three"
                	       android:layout_width="0dp"               	    
                	       android:layout_height="match_parent"
                	       android:layout_weight="1"
                	       android:padding="5dp"
                	       hyman:icon="@drawable/ic_menu_emoticons"               	   
                	       hyman:text="@string/tab_count"
                	       hyman:text_size="12sp"
                	       hyman:color="#ff45c01a"/>
                	            <com.rims_new.ChangeColorIconWithText
                	       android:id="@+id/id_indicator_four"
                	       android:layout_width="0dp"               	    
                	       android:layout_height="match_parent"
                	       android:layout_weight="1"
                	       android:padding="5dp"
                	       hyman:icon="@drawable/ic_menu_start_conversation"               	   
                	       hyman:text="@string/tab_board"
                	       hyman:text_size="12sp"
                	       hyman:color="#ff45c01a"/>          	    
                	</LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </slidingmenu.SlidingMenu>

</RelativeLayout>